--- a/src/templates/organisations_dashboard.html
+++ b/src/templates/organisations_dashboard.html
@@ -31,19 +31,21 @@
             <a href="{{ url_for('superadmin.organisations_dashboard') }}" class="btn btn-primary">Organizations</a>
         </div>
         <h2 class="mb-3">Organisations</h2>
+        
         <table class="table table-striped table-hover">
             <thead class="table-dark">
                 <tr>
                     <th>Name</th>
                     <th>Owner</th>
                     <th>Action</th>
+                    
                 </tr>
             </thead>
             <tbody>
                 {% for organisation in organisations %}
                 <tr>
                     <td>{{ organisation.name }}</td>
-                    <td>{{ organisation.owner.username if organisation.owner else 'AFM' }}</td>
+                    <td>{{ organisation.owner}}</td>
                     <td>
                         <!-- Add any actions you want to perform on organisations here -->
                         <form method="POST" action="{{ url_for('superadmin.delete_organisation', org_id=organisation.id) }}" class="d-inline">
