--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="{{ url_for('superadmin.superadmin_dashboard') }}">Superadmin</a>
                         </li>
                     {% endif %}
-         {% if current_user.is_authenticated and not current_user.manager and not current_user.agent %}
+         {% if current_user.is_authenticated %}
         <li class="nav-item active">
           <a class="nav-link p" href="{{ url_for('auth.profile', username=current_user.username) }}">Profile</a>
         </li>
@@ -56,6 +56,11 @@
         {% if is_super_admin and not current_user.organisation_id%}
           <a class="nav-link cr" href="{{ url_for('admin.create_organisation') }}">Create Organisation</a>
         {% endif %}
+
+        {% if current_user.is_authenticated and not current_user.manager and not current_user.agent and current_user.report%}
+          <a class="nav-link mr" href="{{ url_for('report.my_reports') }}">My Reports</a>
+        {% endif %}
+
         <li class="nav-item active">
         {% if current_user.is_authenticated %}
         <a class="nav-link so" href="{{ url_for('auth.logout') }}">Sign out</a>
