Address is manadtory for a user registration

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -45,7 +45,7 @@
         <div id="map" style="height: 300px; border: 1px solid #ccc;"></div>
         <div class="mb-3">
             <label for="coordinates" class="form-label">Coordinates</label>
-            <input type="text" id="coordinates" name="coordinates" class="form-control" readonly>
+            <input type="text" id="coordinates" name="coordinates" class="form-control" required readonly>
         </div>
         <button type="submit" class="btn btn-dark d-block mx-auto">Register</button>
         <div style="text-align: center;">
