Home address in owner registration added and some small adjustments

--- a/src/templates/admin_dashboard.html
+++ b/src/templates/admin_dashboard.html
@@ -29,7 +29,7 @@
     <input type="text" readonly value="{{ invitation_link }}" style="width: 100%;">
     <br>
     <br>
-        <h3>Manage Users</h3>
+        <h3>Manage Users in {{ organisation.name }}</h3>
         
         <table class="table table-bordered">
             <thead>
