--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -95,6 +95,9 @@
                 <div id="map"></div>
             </div>
             <div class="col-md-3 sidebar">
+            <i class="bi bi-building"></i> {{ user.organisation.name }}
+            <br>
+                <br>
                 {% if role == "Manager" %}
                     <a href="{{ url_for('report.view_reports') }}">See Reports</a>
                     <a href="{{ url_for('task.view_tasks') }}">See Tasks</a>
@@ -103,7 +106,6 @@
                     <a href="{{ url_for('task.manage_requests') }}">Task Assignment Requests</a>
                 {% endif %}
                 <hr>
-                <a href="{{ url_for('auth.edit_profile', username=user.username) }}">Edit Profile</a>
                 <a href="{{ url_for('auth.logout') }}" class="d-flex align-items-center">
                     <i class="bi bi-box-arrow-right"></i> Log out
                 </a>
