--- a/src/templates/register_owner.html
+++ b/src/templates/register_owner.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Register Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="anonymous">
+
+    <style>
 
     </style>
 </head>
@@ -27,16 +29,27 @@
       <label for="username" class="form-label">Username</label>
       <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username", required="required">
     </div>
-    <br>
     <div class="mb-3">
   <label for="password" class="form-label">Password</label>
    <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password", required="required">
     </div>
-        <br>
       <div class="mb-3">
   <label for="email" class="form-label">Email</label>
    <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email", required="required">
     </div>
+         <div class="mb-3">
+            <label for="street" class="form-label">Address</label>
+            <input type="text" id="street" name="street" class="form-control" placeholder="Enter your address">
+        </div>
+        <div class="mb-3">
+            <label for="zipcode" class="form-label">Zip Code</label>
+            <input type="text" id="zipcode" name="zipcode" class="form-control" placeholder="Enter your zip code">
+        </div>
+        <div id="map" style="height: 300px; border: 1px solid #ccc;"></div>
+        <div class="mb-3">
+            <label for="coordinates" class="form-label">Coordinates</label>
+            <input type="text" id="coordinates" name="coordinates" class="form-control" required readonly>
+        </div>
   <button type="submit" class="btn btn-dark d-block mx-auto">Register</button>
         <br>
            <div style=" text-align: center;">
@@ -46,4 +59,123 @@
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin="anonymous"></script>
+<script>
+   const austriaBounds = L.latLngBounds(
+    L.latLng(46.5, 9.5),
+    L.latLng(49.0, 17.0)
+);
+
+var map = L.map('map', {
+    minZoom: 7,
+    maxZoom: 16,
+    maxBounds: austriaBounds,
+    maxBoundsViscosity: 1.0
+}).setView([47.5162, 14.5501], 7);
+
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+
+}).addTo(map);
+
+var marker = L.marker([47.5162, 14.5501]).addTo(map);
+
+function debounce(func, delay) {
+    let timeout;
+    return function (...args) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => func.apply(this, args), delay);
+    };
+}
+
+function geocodeAddress(street, zipcode, country, callback) {
+    const url = `https://nominatim.openstreetmap.org/search?street=${street}&postalcode=${zipcode}&country=${country}&countrycodes=AT&format=json&limit=1`;
+
+    fetch(url)
+        .then((response) => response.json())
+        .then((data) => {
+            if (data.length > 0) {
+                const lat = data[0].lat;
+                const lon = data[0].lon;
+                document.getElementById("coordinates").value = `${lat},${lon}`;
+                marker.setLatLng([lat, lon]);
+                map.setView([lat, lon], 13);
+
+                if (callback) callback();
+            } else {
+                alert("Location not found. Please check your input.");
+            }
+        })
+        .catch((error) => console.error("Error geocoding address:", error));
+}
+
+const updateMap = debounce(() => {
+    const street = document.getElementById("street").value;
+    const zipcode = document.getElementById("zipcode").value;
+    const country = "Austria";
+
+    if (street && zipcode) {
+        geocodeAddress(street, zipcode, country);
+    }
+}, 800);
+
+
+document.getElementById("street").addEventListener("input", updateMap);
+document.getElementById("zipcode").addEventListener("input", updateMap);
+
+
+document.getElementById("registerForm").addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    const street = document.getElementById("street").value;
+    const zipcode = document.getElementById("zipcode").value;
+    const country = "Austria";
+
+    if (street && zipcode) {
+        geocodeAddress(street, zipcode, country, () => {
+            document.getElementById("registerForm").submit();
+        });
+    } else {
+        alert("Please fill in both street and zipcode.");
+    }
+});
+
+map.on('click', function(e) {
+    var lat = e.latlng.lat;
+    var lon = e.latlng.lng;
+
+    if (austriaBounds.contains([lat, lon])) {
+        marker.setLatLng([lat, lon]);
+        document.getElementById("coordinates").value = `${lat},${lon}`;
+
+        // Reverse geocode the selected location to get street and zip code
+        reverseGeocode(lat, lon);
+    } else {
+        alert("Please select a location within Austria.");
+    }
+});
+
+function reverseGeocode(lat, lon) {
+    const url = `https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`;
+
+    fetch(url)
+        .then((response) => response.json())
+        .then((data) => {
+            if (data && data.address) {
+                const street = data.address.road || '';
+                const zipcode = data.address.postcode || '';
+
+                // Update the input fields
+                document.getElementById("street").value = street;
+                document.getElementById("zipcode").value = zipcode;
+            } else {
+                alert("Could not retrieve address information for this location.");
+            }
+        })
+        .catch((error) => {
+            console.error("Error reverse geocoding location:", error);
+            alert("An error occurred while retrieving the address.");
+        });
+}
+
+</script>
 </html>
