--- a/src/templates/report_details.html
+++ b/src/templates/report_details.html
@@ -25,7 +25,7 @@
                 {% if report.photo_file %}
                     <img src="{{ url_for('static', filename= report.photo_file) }}" alt="Report Image" style="width: 100%">
                 {% else %}
-                    <img src="https://via.placeholder.com/600x400" alt="No Image" class="post-image">
+                    <img src="{{ url_for('static', filename='no_image.jpg') }}" alt="No Image" class="post-image" style="width: 100%">
                 {% endif %}
             </div>
 
